User Authentication 0.11.7. patch. CSRF Protection

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -27,6 +27,7 @@
                 <!-- Toggle the navigation links -->
                 {{if .IsAuthenticated}}
                     <form action='/user/logout' method='POST'>
+                        <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
                         <button>Выйти</button>
                     </form>
                 {{else}}
